--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -125,10 +125,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_metrics(eval_pred):\n",
+    "    load_accuracy = load_metric(\"accuracy\")\n",
+    "    load_f1 = load_metric(\"f1\")\n",
+    "\n",
+    "    logits, labels = eval_pred\n",
+    "    predictions = np.argmax(logits, axis=-1)\n",
+    "    accuracy = load_accuracy.compute(predictions=predictions, references=labels)[\"accuracy\"]\n",
+    "    f1 = load_f1.compute(predictions=predictions, references=labels)[\"f1\"]\n",
+    "    return {\"accuracy\": accuracy, \"f1\": f1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_args = TrainingArguments(\n",
+    "   output_dir=\"new_reward/\",\n",
+    "   learning_rate=2e-5,\n",
+    "   per_device_train_batch_size=16,\n",
+    "   per_device_eval_batch_size=16,\n",
+    "   num_train_epochs=2,\n",
+    "   weight_decay=0.01,\n",
+    "   save_strategy=\"epoch\",\n",
+    "   push_to_hub=True,\n",
+    ")\n",
+    " \n",
+    "reward_trainer = Trainer(\n",
+    "   model=reward_model,\n",
+    "   args=training_args,\n",
+    "   train_dataset=tokenized_train,\n",
+    "   eval_dataset=tokenized_test,\n",
+    "   tokenizer=reward_tokenizer,\n",
+    "   data_collator=reward_collator,\n",
+    "   compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reward_trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reward_trainer.evaluate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### SFT Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train and Eval dataset preparations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Training"
    ]
   },
   {
