--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -25,14 +25,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train Reward Model"
+    "### Reward Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreward\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtrain_reward\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_trained_warp_reward_model\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     ]
+    }
+   ],
+   "source": [
+    "from src.reward.train_reward import load_trained_warp_reward_model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare reward model dataset. Let's fit reward model on limited part of train dataset"
+    "Load trained model from Hugging Face. I've trained it earlier by using `create_train_reward_model` function in `src/reward/train_reward.py` file."
    ]
   },
   {
@@ -41,150 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imdb = load_dataset(\"imdb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reduced_train_dataset = imdb['train'].shuffle(seed=42).select([i for i in list(range(3000))])\n",
-    "reduced_test_dataset = imdb[\"test\"].shuffle(seed=42).select([i for i in list(range(300))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from trl import RewardTrainer, RewardConfig\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert/distilbert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
-   "source": [
-    "reward_model = AutoModelForSequenceClassification.from_pretrained(\"distilbert/distilbert-base-cased\")\n",
-    "reward_tokenizer = AutoTokenizer.from_pretrained(\"distilbert/distilbert-base-cased\", num_labels=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess_function(examples):\n",
-    "    return reward_tokenizer(examples[\"text\"], truncation=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'reduced_train_dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tokenized_train \u001b[38;5;241m=\u001b[39m reduced_train_dataset\u001b[38;5;241m.\u001b[39mmap(preprocess_function, batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m tokenized_test \u001b[38;5;241m=\u001b[39m reduced_test_dataset\u001b[38;5;241m.\u001b[39mmap(preprocess_function, batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'reduced_train_dataset' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "tokenized_train = reduced_train_dataset.map(preprocess_function, batched=True)\n",
-    "tokenized_test = reduced_test_dataset.map(preprocess_function, batched=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reward_collator = DataCollatorWithPadding(tokenizer=reward_tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_metrics(eval_pred):\n",
-    "    load_accuracy = load_metric(\"accuracy\")\n",
-    "    load_f1 = load_metric(\"f1\")\n",
-    "\n",
-    "    logits, labels = eval_pred\n",
-    "    predictions = np.argmax(logits, axis=-1)\n",
-    "    accuracy = load_accuracy.compute(predictions=predictions, references=labels)[\"accuracy\"]\n",
-    "    f1 = load_f1.compute(predictions=predictions, references=labels)[\"f1\"]\n",
-    "    return {\"accuracy\": accuracy, \"f1\": f1}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_args = TrainingArguments(\n",
-    "   output_dir=\"new_reward/\",\n",
-    "   learning_rate=2e-5,\n",
-    "   per_device_train_batch_size=16,\n",
-    "   per_device_eval_batch_size=16,\n",
-    "   num_train_epochs=2,\n",
-    "   weight_decay=0.01,\n",
-    "   save_strategy=\"epoch\",\n",
-    "   push_to_hub=True,\n",
-    ")\n",
-    " \n",
-    "reward_trainer = Trainer(\n",
-    "   model=reward_model,\n",
-    "   args=training_args,\n",
-    "   train_dataset=tokenized_train,\n",
-    "   eval_dataset=tokenized_test,\n",
-    "   tokenizer=reward_tokenizer,\n",
-    "   data_collator=reward_collator,\n",
-    "   compute_metrics=compute_metrics,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reward_trainer.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reward_trainer.evaluate()"
+    "reward_tokenizer, reward_model = load_trained_warp_reward_model()"
    ]
   },
   {
@@ -226,6 +104,27 @@
     "sft_model_name = \"lvwerra/gpt2-imdb\"\n",
     "sft_model = AutoModelForCausalLM.from_pretrained(sft_model_name)\n",
     "sft_tokenizer = AutoTokenizer.from_pretrained(sft_model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sft_tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sft_tokenizer\u001b[38;5;241m.\u001b[39mpad_token \u001b[38;5;241m=\u001b[39m sft_tokenizer\u001b[38;5;241m.\u001b[39meos_token\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sft_tokenizer' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sft_tokenizer.pad_token = sft_tokenizer.eos_token"
    ]
   },
   {
